[gd_scene load_steps=66 format=2]

[ext_resource path="res://Mushroom/Run.png" type="Texture" id=1]
[ext_resource path="res://Mushroom/Idle.png" type="Texture" id=2]
[ext_resource path="res://mushroom.gd" type="Script" id=3]
[ext_resource path="res://Mushroom/Death.png" type="Texture" id=4]
[ext_resource path="res://Mushroom/Take Hit.png" type="Texture" id=5]
[ext_resource path="res://Goblin/Run.png" type="Texture" id=6]
[ext_resource path="res://Goblin/Death.png" type="Texture" id=7]
[ext_resource path="res://Goblin/Take Hit.png" type="Texture" id=8]
[ext_resource path="res://Flying eye/Flight.png" type="Texture" id=9]
[ext_resource path="res://Flying eye/Take Hit.png" type="Texture" id=10]
[ext_resource path="res://Flying eye/Death.png" type="Texture" id=11]

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 50, 150, 100 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 150, 50, 150, 100 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 300, 50, 150, 100 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 450, 50, 150, 100 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 50, 150, 100 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 150, 50, 150, 100 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 300, 50, 150, 100 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 450, 50, 150, 100 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 50, 150, 100 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 150, 50, 150, 100 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 300, 50, 150, 100 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 450, 50, 150, 100 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 600, 50, 150, 100 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 750, 50, 150, 100 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 900, 50, 150, 100 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 1050, 50, 150, 100 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 600, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 750, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 900, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1050, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 600, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 750, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 900, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1050, 0, 150, 150 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": false,
"name": "die",
"speed": 4.0
}, {
"frames": [ SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ) ],
"loop": false,
"name": "fly_die",
"speed": 4.0
}, {
"frames": [ SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ) ],
"loop": true,
"name": "fly_hit",
"speed": 8.0
}, {
"frames": [ SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ) ],
"loop": true,
"name": "fly_run",
"speed": 8.0
}, {
"frames": [ SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": false,
"name": "goblin_die",
"speed": 4.0
}, {
"frames": [ SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ) ],
"loop": true,
"name": "goblin_hit",
"speed": 8.0
}, {
"frames": [ SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ) ],
"loop": true,
"name": "goblin_run",
"speed": 8.0
}, {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "hit",
"speed": 8.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 4.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "run",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 11.5, 18.5 )

[node name="Mushroom" type="KinematicBody2D"]
collision_layer = 9
collision_mask = 0
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 13 )
animation = "fly_die"
frame = 3
playing = true
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 7.5 )
shape = SubResource( 14 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="PushbackTimer" type="Timer" parent="."]
one_shot = true

[node name="ChargeTimer" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="PushbackTimer" to="." method="_on_PushbackTimer_timeout"]
[connection signal="timeout" from="ChargeTimer" to="." method="_on_ChargeTimer_timeout"]
